Add opens for ExtendsPlatformClassWithProtectedFields